fixed align-items by download button

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -74,7 +74,6 @@ body {
 .page-top__wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .on-tablet--hidden {
